[project]
name = "p4b4"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Pieter Laeremans", email = "pieter@laeremans.org" }
]
dependencies = [
    "psycopg2>=2.9.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/p4b4"]
